--- a/package.json
+++ b/package.json
@@ -9,10 +9,6 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "autoprefixer": "^10.0.2",
-    "cssnano": "^4.1.10",
-    "postcss": "^8.1.7"
-  }
+  "license": "ISC"
+  
 }
